# PredictaBoard

./: .gitattributes  .gitignore  README.md  pyproject.toml
assessors/llama-fine-tuning/: evaluate.py  finetune.py  utils.py
data/: README.md
data/open-llm-leaderboard-v2/: bbh_boolean_expressions_prompts.csv  bbh_boolean_expressions_results.csv  bbh_causal_judgement_prompts.csv  bbh_causal_judgement_results.csv  bbh_date_understanding_prompts.csv  bbh_date_understanding_results.csv  bbh_disambiguation_qa_prompts.csv  bbh_disambiguation_qa_results.csv  bbh_formal_fallacies_prompts.csv  bbh_formal_fallacies_results.csv  (+62 more)
results/: OpenAI__GPT-4o-2024-05-13_assessor_llama_3.2_1B_ifeval.csv  OpenAI__GPT-4o-2024-05-13_assessor_llama_3.2_1B_math.csv  OpenAI__GPT-4o-2024-05-13_assessor_llama_3.2_1B_mmlu_pro.csv  OpenAI__GPT-4o-2024-08-06_assessor_llama_3.2_1B_ifeval.csv  OpenAI__GPT-4o-2024-08-06_assessor_llama_3.2_1B_math.csv  OpenAI__GPT-4o-2024-08-06_assessor_llama_3.2_1B_mmlu_pro.csv  OpenAI__GPT-4o-mini_assessor_llama_3.2_1B_ifeval.csv  OpenAI__GPT-4o-mini_assessor_llama_3.2_1B_math.csv  OpenAI__GPT-4o-mini_assessor_llama_3.2_1B_mmlu_pro.csv  meta-llama__Meta-Llama-3.1-70B-Instruct_assessor_llama_3.2_1B_ifeval.csv  meta-llama__Meta-Llama-3.1-70B-Instruct_assessor_llama_3.2_1B_math.csv  meta-llama__Meta-Llama-3.1-70B-Instruct_assessor_llama_3.2_1B_mmlu_pro.csv  migtissera__Tess-3-Mistral-Nemo-12B_assessor_llama_3.2_1B_ifeval.csv  migtissera__Tess-3-Mistral-Nemo-12B_assessor_llama_3.2_1B_math.csv  migtissera__Tess-3-Mistral-Nemo-12B_assessor_llama_3.2_1B_mmlu_pro.csv
(+24 files in other folders)
