[project]
name = "predbench"
version = "0.1.0"
description = "Add your description here"
authors = []
dependencies = [
    "numpy==1.25.2",
    "pandas==1.5.3",
    "matplotlib==3.9.2",
    "huggingface-hub>=0.26.2",
    "datasets>=3.1.0",
    "scikit-learn==1.2.0",
    "scipy==1.11.3",
    "jsonlines==4.0.0",
    "gensim==4.3.2",
    "nltk==3.8.1",
    "openai==0.28.1",
    "tqdm>=4.66.3",
    "xgboost==2.0.3",
    "seaborn==0.13.2"
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/predbench"]
